# OnP_DataAnalysis

./: .gitignore  README.md  agent.py  app.py  main.py  mcp_servers.json  pyproject.toml
data/: op_claims_data.csv
hooks/: __init__.py  audit.py  safety.py
prompts/: __init__.py  system.py
static/: index.html
tests/: __init__.py  test_data_tools.py  test_hooks.py  test_integration.py  test_sqlite_tool.py
tools/: __init__.py  data_tools.py  excel_tool.py  sqlite_tool.py
